--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2011,7 +2011,6 @@ select[multiple].input-lg {
   right: 15px;
 }
 .btn {
-	height:200px;
 	width: 100%;
   display: inline-block;
   padding: 6px 12px;
@@ -2027,9 +2026,21 @@ select[multiple].input-lg {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  background-image: none;
+  
   border: 1px solid transparent;
   border-radius: 4px;
+background-image: -webkit-gradient(
+	linear,
+	left bottom,
+	left top,
+	color-stop(0, #F7F9FF),
+	color-stop(1, #E9EEF2)
+);
+background-image: -o-linear-gradient(top, #F7F9FF 0%, #E9EEF2 100%);
+background-image: -moz-linear-gradient(top, #F7F9FF 0%, #E9EEF2 100%);
+background-image: -webkit-linear-gradient(top, #F7F9FF 0%, #E9EEF2 100%);
+background-image: -ms-linear-gradient(top, #F7F9FF 0%, #E9EEF2 100%);
+background-image: linear-gradient(to top, #F7F9FF 0%, #E9EEF2 100%);
 }
 .btn:focus,
 .btn:active:focus,
