--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5152,7 +5152,7 @@ button.close {
 }
 .modal-content {
   position: relative;
-  background-color: #fff;
+  background-color: #77EFFF;
   background-clip: padding-box;
   border: 1px solid #999;
   border: 1px solid rgba(0, 0, 0, .2);
