--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5179,25 +5179,18 @@ button.close {
 }
 .modal-content {
   position: relative;
-  background-image: -webkit-gradient(
+background-image: -webkit-gradient(
 	linear,
-	left bottom,
 	left top,
-	color-stop(0, #F7F9FF),
-	color-stop(1, #77EFFF)
+	left bottom,
+	color-stop(0, #FCC0C0),
+	color-stop(1, #FFF5FD)
 );
-background-image: -o-linear-gradient(top, #F7F9FF 0%, #77EFFF 100%);
-background-image: -moz-linear-gradient(top, #F7F9FF 0%, #77EFFF 100%);
-background-image: -webkit-linear-gradient(top, #F7F9FF 0%, #77EFFF 100%);
-background-image: -ms-linear-gradient(top, #F7F9FF 0%, #77EFFF 100%);
-background-image: linear-gradient(to top, #F7F9FF 0%, #77EFFF 100%);
-  background-clip: padding-box;
-  border: 1px solid #999;
-  border: 1px solid rgba(0, 0, 0, .2);
-  border-radius: 6px;
-  outline: none;
-  -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
-          box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
+background-image: -o-linear-gradient(bottom, #FCC0C0 0%, #FFF5FD 100%);
+background-image: -moz-linear-gradient(bottom, #FCC0C0 0%, #FFF5FD 100%);
+background-image: -webkit-linear-gradient(bottom, #FCC0C0 0%, #FFF5FD 100%);
+background-image: -ms-linear-gradient(bottom, #FCC0C0 0%, #FFF5FD 100%);
+background-image: linear-gradient(to bottom, #FCC0C0 0%, #FFF5FD 100%);
 }
 .modal-backdrop {
   position: fixed;
