--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -47,18 +47,7 @@ background-image: linear-gradient(to right, #FE0E18 0%, #FF5E5E 100%);
 }
 .adForm{
 
-background-image: -webkit-gradient(
-	linear,
-	left bottom,
-	left top,
-	color-stop(0, #F7F9FF),
-	color-stop(1, #E9EEF2)
-);
-background-image: -o-linear-gradient(top, #F7F9FF 0%, #E9EEF2 100%);
-background-image: -moz-linear-gradient(top, #F7F9FF 0%, #E9EEF2 100%);
-background-image: -webkit-linear-gradient(top, #F7F9FF 0%, #E9EEF2 100%);
-background-image: -ms-linear-gradient(top, #F7F9FF 0%, #E9EEF2 100%);
-background-image: linear-gradient(to top, #F7F9FF 0%, #E9EEF2 100%);
+background-color: #EEEEEE;
 
 padding: 3px;
 
