--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -33,8 +33,9 @@ body {
 .job-button{
  background-size: 50%;
  background-repeat: no-repeat;
- background-position: top center;
- height: 300px; 
+	 
+ background-position: center 30%;
+ height: 250px; 
 
  }
  .btn-text{
