--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -17,6 +17,7 @@ html {
    font-size: 62.5%;
 
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+   overflow: auto;
   
   
 }
@@ -26,9 +27,7 @@ body {
   line-height: 1.42857143;
   color: black;
   height = 200px;
-  background: #CCCCCC
-
-
+  background-color: white;
 }
 .job-button{
  background-size: 50%;
@@ -2382,7 +2381,7 @@ fieldset[disabled] .btn-link:focus {
   padding: 10px 16px;
   font-size: 18px;
   line-height: 1.33;
-  border-radius: 6px;
+  border-radius: 0px;
 }
 .btn-sm,
 .btn-group-sm > .btn {
@@ -4818,8 +4817,8 @@ a.list-group-item-danger.active:focus {
 .panel {
   margin-bottom: 20px;
   background-color: #fff;
-  border: 1px solid transparent;
-  border-radius: 4px;
+  border: 2px solid red;
+
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
           box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
 }
