Major cosmetic overhau again

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -56,6 +56,10 @@ background-image: -ms-linear-gradient(right, #FE0E18 0%, #FF5E5E 100%);
 background-image: linear-gradient(to right, #FE0E18 0%, #FF5E5E 100%);
   border-color: #e7e7e7;
 }
+
+.navbar-disclaimer {
+background-color: #FF9696;
+}
 .adForm{
 
 background-color: #EEEEEE;
@@ -5179,18 +5183,7 @@ button.close {
 }
 .modal-content {
   position: relative;
-background-image: -webkit-gradient(
-	linear,
-	left top,
-	left bottom,
-	color-stop(0, #FCC0C0),
-	color-stop(1, #FFF5FD)
-);
-background-image: -o-linear-gradient(bottom, #FCC0C0 0%, #FFF5FD 100%);
-background-image: -moz-linear-gradient(bottom, #FCC0C0 0%, #FFF5FD 100%);
-background-image: -webkit-linear-gradient(bottom, #FCC0C0 0%, #FFF5FD 100%);
-background-image: -ms-linear-gradient(bottom, #FCC0C0 0%, #FFF5FD 100%);
-background-image: linear-gradient(to bottom, #FCC0C0 0%, #FFF5FD 100%);
+  background-color: white;
 }
 .modal-backdrop {
   position: fixed;
@@ -5213,6 +5206,7 @@ background-image: linear-gradient(to bottom, #FCC0C0 0%, #FFF5FD 100%);
   min-height: 16.42857143px;
   padding: 15px;
   border-bottom: 1px solid #e5e5e5;
+  background-color: #FF8989;
 }
 .modal-header .close {
   margin-top: -2px;
@@ -5224,12 +5218,14 @@ background-image: linear-gradient(to bottom, #FCC0C0 0%, #FFF5FD 100%);
 .modal-body {
   position: relative;
   padding: 0px 20px 0px 20px;
+  background-color: white;
 }
 .modal-footer {
   padding: 19px 20px 20px;
   margin-top: 15px;
   text-align: right;
   border-top: 1px solid #e5e5e5;
+  background-color: #FF8989;
 }
 .modal-footer .btn + .btn {
   margin-bottom: 0;
